--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Statistical Analysis</span> <span class="pull-right">80%</span>
+									<span>Statistical Analysis</span> <span class="pull-right">85%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Machine Learning</span> <span class="pull-right">80%</span>
+									<span>Machine Learning</span> <span class="pull-right">85%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 
@@ -331,7 +331,7 @@
 		</div>
 		<br>
 		
-		<div class="row">
+<!-- 		<div class="row"> -->
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-Present</span>
