--- a/index.html
+++ b/index.html
@@ -377,18 +377,18 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2018</span>
-    					<h2>Bachelor of Engineering</h2>
-    					<span class="position">Visvesvaraya Technological University</span>
+    					<span class="date">2021-2023</span>
+    					<h2>Master of Pharmacy</h2>
+    					<span class="position">Jawaharlal Nehru Technological University,Kakinada</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2012-2013</span>
-    					<h2>Higher Secondary School</h2>
-    					<span class="position">Army Public School</span>
+    					<span class="date">2017-2021</span>
+    					<h2>Bachelor of Pharmacy</h2>
+    					<span class="position">Sri Padmavathi Mahila Visvavidyalayam</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
@@ -410,7 +410,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample projects on ML, SQL.</p>
           </div>
         </div>
         <div class="row d-flex">
