--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Kalpana Sanikommu</span></p>
+										<p><span class="title-s">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
 										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
@@ -414,9 +414,9 @@
           </div>
         </div>
         <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
+          <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql" class="block-20 zoom-effect" style="background-image: url('C:\Users\Hi\Downloads\Kalpana\images\hr.jpg');">
+              <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql" class="block-20 zoom-effect" style="background-image: url('images/hr.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -426,7 +426,7 @@
 				</p>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Disease_Prediction.ipynb" class="block-20 zoom-effect" style="background-image: url('images/dp.jpeg');">
@@ -461,6 +461,19 @@
   
 				  <h3 class="heading"><a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb">ML and DL project</a></h3>
 				  <p>Telecom Customer Churn Analysis</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql" class="block-20 zoom-effect" style="background-image: url('images/hr.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql">Hotel Reservation Analysis by SQL</a></h3>
+				  <p>Hotel Reservation data using advanced SQL queires to gain insights into guest preferences, 
+					  booking trends, and other key factors that impact the hotel's operations.
+				  </p>
 				</div>
 			  </div>
 			</div>
