--- a/index.html
+++ b/index.html
@@ -414,19 +414,7 @@
           </div>
         </div>
         <div class="row d-flex">
-          <!-- <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql" class="block-20 zoom-effect" style="background-image: url('images/hr.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql">Hotel Reservation Analysis by SQL</a></h3>
-                <p>Hotel Reservation data using advanced SQL queires to gain insights into guest preferences, 
-					booking trends, and other key factors that impact the hotel's operations.
-				</p>
-              </div>
-            </div>
-          </div> -->
+         
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Disease_Prediction.ipynb" class="block-20 zoom-effect" style="background-image: url('images/dp.jpeg');">
@@ -438,6 +426,17 @@
               </div>
             </div>
           </div>
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/churn.jpeg');">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb">ML and DL project</a></h3>
+			  <p>Telecom Customer Churn Analysis</p>
+			</div>
+		  </div>
+		</div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/2.%20Market_Price_Prediction.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
@@ -451,9 +450,9 @@
           </div>
         </div>
 	<br>
-		<!-- added justify-content-center to center align the last two projects -->
+		
 		<div class="row d-flex justify-content-center">  
-			<div class="col-md-4 d-flex ftco-animate">
+			<!-- <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/churn.jpeg');">
 				</a>
@@ -463,7 +462,7 @@
 				  <p>Telecom Customer Churn Analysis</p>
 				</div>
 			  </div>
-			</div>
+			</div> -->
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/kalpanasanikommu/Mentorness_internship/blob/main/Data%20Analyst%20internship/Hotel%20reservation%20analysis.sql" class="block-20 zoom-effect" style="background-image: url('images/hr.jpg');">
