--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> -->
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
-									<div class="col-sm-6 col-md-7">
+									<div class="col-sm-6 col-md-5">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
