--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Rishabh Mishra Portfolio</title>
+    <title>Kalpana Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -29,7 +29,7 @@
 /*======================================
 //--//-->   ABOUT
 ======================================*/
-
+/* 
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -40,7 +40,7 @@
 }
 
 .about-mf .about-img img {
-  margin-left: 10px;
+  margin-left: 10px; */
 }
 
 
@@ -206,17 +206,17 @@
 			<div class="row">
 				<div class="row d-flex align-items-stretch">
 				<!-- <div class="row d-flex"> -->
-					<div class="col-md-6 col-lg-5 d-flex">
+					<div class="col-md-5 col-lg-6 d-flex">
 						<div class="img-about img d-flex align-items-stretch">
 							<div class="overlay">
 								<div class="row">
-									<div class="col-sm-6 col-md-5">
+									<div class="col-sm-5 col-md-5">
 									  <div class="about-img">
 										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> -->
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
-									<div class="col-sm-6 col-md-5">
+									<div class="col-sm-5 col-md-5">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
