--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-5 col-md-5">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Kalpana S</span></p>
+										<!-- <h1 class="mb-4 mt-3">I'm <span>Kalpana</span></h1> -->
+										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
 										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
