--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 /*======================================
 //--//-->   ABOUT
 ======================================*/
-/* 
+
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -40,7 +40,7 @@
 }
 
 .about-mf .about-img img {
-  margin-left: 10px; */
+  margin-left: 10px;
 }
 
 
@@ -205,27 +205,28 @@
     	<div class="container">
 			<div class="row">
 				<div class="row d-flex align-items-stretch">
-				<!-- <div class="row d-flex"> -->
+				<div class="row d-flex"> -->
 					<div class="col-md-5 col-lg-6 d-flex">
 						<div class="img-about img d-flex align-items-stretch">
 							<div class="overlay">
 								<div class="row">
 									<div class="col-sm-5 col-md-5">
 									  <div class="about-img">
-										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> -->
-									  </div>
+										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> --> 
+									  <!-- </div>
 									</div>
-									<!-- Details next to profile image -->
-									<div class="col-sm-5 col-md-5">
-									  <div class="about-info">
-										<!-- <h1 class="mb-4 mt-3">I'm <span>Kalpana</span></h1> -->
+									 < Details next to profile image>
+									 <div class="col-sm-5 col-md-5">
+									  <div class="about-info"> 
+										
 										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
+										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
 										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
 									  </div>
 									</div>
-								  </div>
+								  </div> 
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
@@ -429,7 +430,7 @@
           </div>
 		  <div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/churn.jpeg');">
+			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/Customer_Churn_Prediction_Models_in_Machine_Learning.png');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
@@ -591,7 +592,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing</a></p>
+	            <p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing"></a></p>
 	          </div>
           </div>
 
