--- a/index.html
+++ b/index.html
@@ -200,18 +200,18 @@
     </section>
 
 
-
+<!-- 
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
 			<div class="row">
 				<div class="row d-flex align-items-stretch">
 				<div class="row d-flex"> -->
-					<div class="col-md-5 col-lg-6 d-flex">
+					<!-- <div class="col-md-5 col-lg-6 d-flex">
 						<div class="img-about img d-flex align-items-stretch">
 							<div class="overlay">
 								<div class="row">
 									<div class="col-sm-5 col-md-5">
-									  <div class="about-img">
+									  <div class="about-img"> --> -->
 										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> --> 
 									  <!-- </div>
 									</div>
@@ -222,8 +222,8 @@
 										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
-										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
-										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
+										<p><span class="mb-4 mt-3">Name:Kalpana S </span> </p>
+										<p><span class="title-s">Address:Hyderabad, India </span></p>
 									  </div>
 									</div>
 								  </div> 
@@ -538,7 +538,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4> -->
 						<br>
-						<p><a href="https://github.com/kalpanasanikommu" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/kalpanasanikommu" class="btn btn-primary py-2 px-3">GitHub</a></p>
 						</div>
 					</div>
 				</div>
