--- a/index.html
+++ b/index.html
@@ -200,26 +200,26 @@
     </section>
 
 
-<!-- 
+
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
 			<div class="row">
 				<div class="row d-flex align-items-stretch">
-				<div class="row d-flex"> -->
-					<!-- <div class="col-md-5 col-lg-6 d-flex">
+				<div class="row d-flex">
+					 <div class="col-md-5 col-lg-6 d-flex">
 						<div class="img-about img d-flex align-items-stretch">
 							<div class="overlay">
 								<div class="row">
 									<div class="col-sm-5 col-md-5">
-									  <div class="about-img"> --> -->
+									  <div class="about-img"> 
 										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> --> 
-									  <!-- </div>
+									  </div>
 									</div>
 									 < Details next to profile image>
 									 <div class="col-sm-5 col-md-5">
 									  <div class="about-info"> 
 										
-										<p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p>
+										<!-- <p><span class="mb-4 mt-3">Name: </span> <span>Kalpana S</span></p> -->
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
 										<p><span class="mb-4 mt-3">Name:Kalpana S </span> </p>
@@ -229,7 +229,7 @@
 								  </div> 
 
 								<div class="skill-mf">
-									<p class="title-s">Skills</p>
+									<p class="subheading">Skills</p>
 									<span>SQL</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
@@ -530,6 +530,7 @@
           </div>
         </div>
       </div> -->
+	  
 	
 	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<!-- <div class="container"> -->
@@ -538,7 +539,9 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4> -->
 						<br>
-						<p><a href="https://github.com/kalpanasanikommu" class="btn btn-primary py-2 px-3">GitHub</a></p>
+						<div class="row justify-content-center mt-5">
+							<div class="col-md-6 text-center ftco-animate">
+						<p><a href="https://github.com/kalpanasanikommu" class=" btn btn-primary py-4 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
