--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 										<!-- <img src="images/k ps pic 2.jpg" class="img-fluid rounded b-shadow-a" alt=""> --> 
 									  </div>
 									</div>
-									 < Details next to profile image>
+									 <!-- < Details next to profile image> -->
 									 <div class="col-sm-5 col-md-5">
 									  <div class="about-info"> 
 										
@@ -223,7 +223,7 @@
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
 										<p><span class="mb-4 mt-3">Name:Kalpana S </span> </p>
-										<p><span class="title-s">Address:Hyderabad, India </span></p>
+										<p><span class="mb-4 mt-3">Address:Hyderabad,India </span></p>
 									  </div>
 									</div>
 								  </div> 
@@ -540,8 +540,8 @@
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4> -->
 						<br>
 						<div class="row justify-content-center mt-5">
-							<div class="col-md-6 text-center ftco-animate">
-						<p><a href="https://github.com/kalpanasanikommu" class=" btn btn-primary py-4 px-5">GitHub</a></p>
+							<div class="col-md-5 text-center ftco-animate">
+						<p><a href="https://github.com/kalpanasanikommu" class="btn btn-primary py-4 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
