--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Kalpana Sanikommu</span></p>
+										<p><span class="title-s">Name: </span> <span>Kalpana</span></p>
 										<!-- <p><span class="title-s">Job Role: </span> <span>Aspiring Data Scientist</span></p> -->
 										<!-- <p><span class="title-s">Experience: </span> <span>1 Month internship</span></p> -->
 										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
@@ -529,14 +529,17 @@
           </div>
         </div>
       </div> -->
+	 
 	  
 	  
 	
-	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<!-- <div class="container"> -->
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>More projects on<span> Github  </span> </h2>
+	  <!-- <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)"> -->
+			 <div class="container"> 
+				<!-- <div class="row justify-content-center">
+					<div class="col-md-7 ftco-animate text-center"> -->
+						<div class="row justify-content-center mb-5 pb-5">
+							<div class="col-md-7 heading-section text-center ftco-animate">
+						    <h2>More projects on<span> Github  </span> </h2>
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4> -->
 											
 						<p><a href="https://github.com/kalpanasanikommu" class="btn btn-primary py-3 px-5">GitHub</a></p>
