--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing"></a></p>
+	            <p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing">Download Resume</a></p>
 	          </div>
           </div>
 
