--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
 									<li class="d-flex"><span>Education:</span> <span>Master of Pharmacy</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Telugu</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li>
+									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI &amp; Tableau</span></li>
 									<li class="d-flex"><span>Skills:</span> <span>Python,SQL,Advanced Excel,Statistics,Machine learning,Deep Learning,NLP &amp; Deployment</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Learning, Teaching</span></li>
 									
