--- a/index.html
+++ b/index.html
@@ -605,14 +605,16 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
+					<li class="ftco-animate normal-txt">Find me on  </li>
+					<h2><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></h2> 
 					<!-- <h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2> -->
 				</div>
 			</div>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
-					  <li class="ftco-animate normal-txt">Find me on  </li>
+					  <!-- <li class="ftco-animate normal-txt">Find me on  </li> -->
 					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
-					  <li class="ftco-animate"><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></li>  
+					  <!-- <li class="ftco-animate"><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></li>   -->
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-twitter"></span></a></li> -->
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-facebook"></span></a></li> -->
 				      <!-- <li class="ftco-animate"><a href="https://www.instagram.com/kalpana9010420/#"><span class="icon-instagram"></span></a></li> -->
