--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<li class="ftco-animate normal-txt">Find me on  </li>
-					<h2><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></h2> 
+					<h2 class="mb-4">Find me on  </h2>
+					<p><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></p> 
 					<!-- <h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2> -->
 				</div>
 			</div>
