--- a/index.html
+++ b/index.html
@@ -599,19 +599,28 @@
 	            <p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing">Download Resume</a></p>
 	          </div>
           </div>
+		  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+			<div class="align-self-stretch box p-4 text-center">
+				<div class="icon d-flex align-items-center justify-content-center">
+					<span class="icon-linkedin"></span>
+				</div>
+				<h3 class="mb-4">Find me on</h3>
+			  <p><a href="www.linkedin.com/in/kalpana-s-34aab1293">Linkedin</a></p>
+			</div>
+		</div>
 
-		  <div class="container">
+		  <!-- <div class="container">
 			<br>
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2 class="mb-4">Find me on  </h2>
 					<p><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></p> 
-					<!-- <h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2> -->
+					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
-			</div>
-				<br>
-					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
+			</div> -->
+				<!-- <br>
+					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0"> -->
 					  <!-- <li class="ftco-animate normal-txt">Find me on  </li> -->
 					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
 					  <!-- <li class="ftco-animate"><a href="www.linkedin.com/in/kalpana-s-34aab1293"><span class="icon-linkedin"></span></a></li>   -->
