--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1Oifhku7i16P4F9VFxGjIo2n1MU0kTFPJ/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -429,7 +429,7 @@
           </div>
 		  <div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/Customer_Churn_Prediction_Models_in_Machine_Learning.png');">
+			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('C:\Users\Hi\Downloads\Kalpana\images\churn.webp');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
@@ -595,8 +595,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1bhQWN0m4nUTzj4G7C9I3hxHH7JSDsf4I/view?usp=sharing">Download Resume</a></p>
+          		<h3 class="mb-4">Resume</h3>
+	            <p><a href="https://drive.google.com/file/d/1Oifhku7i16P4F9VFxGjIo2n1MU0kTFPJ/view?usp=drive_link">Download Resume</a></p>
 	          </div>
           </div>
 		  
