--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           </div>
 		  <div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('C:\Users\Hi\Downloads\Kalpana\images\churn.webp');">
+			<a href="https://github.com/kalpanasanikommu/Machine-learning/blob/main/Telecom_Domain_Project/Telecom_Churn_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/churn1.jpg');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
